tests/machine/x/c/list_nested_assign.error
line: 7
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/list_nested_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:7:21: warning: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
    7 |     int matrix[] = {(int[]){1, 2}, (int[]){3, 4}};
      |                     ^
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:7:21: note: (near initialization for ‘matrix[0]’)
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:7:36: warning: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
    7 |     int matrix[] = {(int[]){1, 2}, (int[]){3, 4}};
      |                                    ^
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:7:36: note: (near initialization for ‘matrix[1]’)
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:8:14: error: subscripted value is neither array nor pointer nor vector
    8 |     matrix[1][0] = 5;
      |              ^
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:9:29: error: subscripted value is neither array nor pointer nor vector
    9 |     printf("%d\n", matrix[1][0]);
      |                             ^

